--- a/src/main/resources/html/TZApplicationSurveyBundle/TZ_SURVEY_PAGE_HTML.html
+++ b/src/main/resources/html/TZApplicationSurveyBundle/TZ_SURVEY_PAGE_HTML.html
@@ -175,6 +175,7 @@
 			 </div>
 		</div>
 		<input type="hidden" id="unique" name="unique" value="%bind(:20)"/>
+		%bind(:24)
 		<div id="flowtips" style="padding:5px;border-radius:3px;position:absolute;display:none;word-break:break-all;max-width:150px;background-color:#FF893A;border:1px solid;border-color:#FF0000;"></div>
 	</body>
 	<script type="text/javascript">
@@ -304,8 +305,14 @@
 
 			var _a = getData();
 			var _unique = $("#unique").val();
-			var tzSaveParams = '{"ComID":"TZ_ZXDC_WJGL_COM","PageID":"TZ_SURVEY_APP_STD","OperateType":"U","comParams":{"update":[{"TZ_APP_C_TYPE":"' + cType + '","SURVEY_WJ_ID":' + templId + ',"SURVEY_INS_ID":"'+ appInsId + '","PAGE_ID":"2","unique":"'+ _unique +'","data":' + $.toJSON(_a) + '}]}}';
-            $.ajax({
+			
+			var tzSaveParams = '{"ComID":"TZ_ZXDC_WJGL_COM","PageID":"TZ_SURVEY_APP_STD","OperateType":"U","comParams":{"update":[{"TZ_APP_C_TYPE":"' + cType + '","SURVEY_WJ_ID":' + templId + ',"SURVEY_INS_ID":"'+ appInsId + '","pageNo":"' + SurveyBuild.curPageNo + '","unique":"'+ _unique +'"';
+			if($("#OPENID")){
+				tzSaveParams = tzSaveParams + ',"openid":"' + $("#OPENID").val() + '"';
+			}
+			tzSaveParams = tzSaveParams + ',"data":' + $.toJSON(_a) + '}]}}';
+			//var tzSaveParams = '{"ComID":"TZ_ZXDC_WJGL_COM","PageID":"TZ_SURVEY_APP_STD","OperateType":"U","comParams":{"update":[{"TZ_APP_C_TYPE":"' + cType + '","SURVEY_WJ_ID":' + templId + ',"SURVEY_INS_ID":"'+ appInsId + '","pageNo":"2","unique":"'+ _unique +'","data":' + $.toJSON(_a) + '}]}}';
+			$.ajax({
                 type: "POST",
 				url:SurveyBuild.tzGeneralURL,
                 data: {
@@ -363,17 +370,17 @@
 		//上一页
 		function prePage(){
 			if(SurveyBuild.curPageNo > 1){
-				pageTo(SurveyBuild.curPageNo - 1);
+				pageTo(SurveyBuild.curPageNo - 1,"PRE");
 			}
 		}
 		//下一页
 		function nextPage(){
 			if(SurveyBuild.curPageNo < SurveyBuild.maxPage){
-				pageTo(SurveyBuild.curPageNo + 1);
+				pageTo(SurveyBuild.curPageNo + 1,"NEXT");
 			}
 		}
 		//页面跳转
-		function pageTo(pageno){
+		function pageTo(pageno,cType){
 			if(SurveyBuild.maxPage == 1){
 				//只有一页，禁止跳转
 				return false;
@@ -383,7 +390,7 @@
 				var isValid = $.formValidator.pageIsValid();
 				if(isValid){
 					SurveyBuild.curPageNo = pageno;
-					SaveSurvey("SAVE");
+					SaveSurvey(cType);
 					setTimeout(function(){refreshTip();}, 2000);
 				}else{
 					scrollTop();
