--- a/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_ERROR_PAGE_HTML.html
+++ b/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_ERROR_PAGE_HTML.html
@@ -18,15 +18,19 @@
 .message-text{
 	padding-top: 10px;
 	color: #333;
-	font-size: 20px;
+	font-size: 18px;
 	line-height: 30px;
+}
+.message-text.hidden{
+	display: none;
 }
 </style>
 </head>
 <body>
 	<div class="errorMsg">
 		<div class="error-icon"></div>
-		<div class="message-text">%bind(:2)</div>
+		<div class="message-text %bind(:3)">%bind(:2)</div>
+		<div class="message-text %bind(:4)">系统繁忙，请点击<a href="javascript:history.back();">返回首页</a>或<a href="javascript:location.reload(true);">刷新</a>重试。</div>
 	</div>
 </body>
 </html>
