--- a/src/main/resources/html/TZWeUIBundle/TZ_WEUI_PHONE_HTML.html
+++ b/src/main/resources/html/TZWeUIBundle/TZ_WEUI_PHONE_HTML.html
@@ -284,9 +284,6 @@
                 <h2 class="title">问题------数字填空</h2>
                 <div class="weui-cells weui-cells_form">
                     <div class="weui-cell">
-                        <div class="weui-cell__hd">
-                            <label class="weui-label">qq</label>
-                        </div>
                         <div class="weui-cell__bd">
                             <input class="weui-input" type="number" pattern="[0-9]*"
                                    placeholder="请输入qq号"/>
@@ -299,9 +296,6 @@
                 <h2 class="title">问题------表单报错</h2>
                 <div class="weui-cells weui-cells_form">
                     <div id="cardIdCell" class="weui-cell weui-cell_warn">
-                        <div class="weui-cell__hd">
-                            <label for="" class="weui-label">卡号</label>
-                        </div>
                         <div class="weui-cell__bd">
                             <input id="cardId" class="weui-input" type="number"
                                    pattern="[0-9]*" value="" placeholder="请输入卡号"/>
@@ -328,9 +322,6 @@
                 <h2 class="title">问题------日期</h2>
                 <div class="weui-cells weui-cells_form">
                     <div class="weui-cell">
-                        <div class="weui-cell__hd">
-                            <label for="" class="weui-label">日期</label>
-                        </div>
                         <div class="weui-cell__bd">
                             <input class="weui-input" type="date" value=""/>
                         </div>
@@ -342,9 +333,6 @@
                 <h2 class="title">问题------时间</h2>
                 <div class="weui-cells weui-cells_form">
                     <div class="weui-cell">
-                        <div class="weui-cell__hd">
-                            <label for="" class="weui-label">时间</label>
-                        </div>
                         <div class="weui-cell__bd">
                             <input class="weui-input" type="datetime-local" value=""
                                    placeholder=""/>
@@ -359,7 +347,7 @@
                     <div class="page__bd page__bd_spacing">
                         <div id="showDatePicker" class="weui-cell weui-cell_access">
                             <div class="weui-cell__hd">
-                                <span style="vertical-align: middle">日期选择器</span>
+                                <span style="vertical-align: middle"></span>
                             </div>
                             <div class="weui-cell__bd">
                                 <input id="showDatePickers_text" class="weui-input" type="text"
@@ -383,7 +371,7 @@
             </section>
 
             <section>
-                <h2 class="title">问题------多行文本框</h2>
+                <h2 class="title">问题------组合多行文本框</h2>
                 <div class="weui-cells">
                     <div class="weui-cell">
                         <div class="weui-cell__hd">
@@ -486,7 +474,7 @@
                     <div class="page__bd page__bd_spacing">
                         <div id="showPicker" class="weui-cell weui-cell_access">
                             <div class="weui-cell__hd">
-                                <span style="vertical-align: middle">单列选择器</span>
+                                <span style="vertical-align: middle"></span>
                             </div>
                             <div class="weui-cell__bd">
                                 <input id="showPicker_text" class="weui-input" type="text" readonly="readonly"/>
