活动签到修改

--- a/src/main/resources/html/TZEventsSignInBundle/TZ_HDQD_LOGIN_HTML.html
+++ b/src/main/resources/html/TZEventsSignInBundle/TZ_HDQD_LOGIN_HTML.html
@@ -102,7 +102,7 @@
 					</div>
 				</form>
 			</div>
-			<div class="footer">Copyright © 2017 北京大学经济管理学院 版权所有</div>
+			<div class="footer">Copyright © 2018 华东理工大学 版权所有</div>
 		</div>
 	</body>
 </html>
