--- a/src/main/resources/html/TZEventsSignInBundle/TZ_HDQD_QDM_INPUT_HTML.html
+++ b/src/main/resources/html/TZEventsSignInBundle/TZ_HDQD_QDM_INPUT_HTML.html
@@ -49,7 +49,7 @@ $(document).ready(function(){
     </div>
 </div>
 
-<div class="footer">Copyright © 2017 清华大学经济管理学院 版权所有</div>
+<div class="footer">Copyright © 2018 华东理工大学 版权所有</div>
 <script type="text/javascript">
 	function submitQd(){
 		var qdm = $("#qdm").val();
