--- a/src/main/resources/html/TZEventsSignInBundle/TZ_PHONE_ACTSIGN_HTML.html
+++ b/src/main/resources/html/TZEventsSignInBundle/TZ_PHONE_ACTSIGN_HTML.html
@@ -37,7 +37,7 @@
 	</div>	
 </div>
 
-<div class="footer">Copyright © 2017 清华大学经济管理学院 版权所有</div>
+<div class="footer">Copyright © 2018 华东理工大学 版权所有</div>
 <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 <script type="text/javascript">
   wx.config({
