--- a/src/main/resources/html/TZEventsSignInBundle/TZ_HDQD_BMR_DETAILS_HTML.html
+++ b/src/main/resources/html/TZEventsSignInBundle/TZ_HDQD_BMR_DETAILS_HTML.html
@@ -39,7 +39,7 @@
   </div>
 </div>
 
-<div class="footer">Copyright © 2017 清华大学经济管理学院 版权所有</div>
+<div class="footer">Copyright © 2018 华东理工大学 版权所有</div>
 <script type="text/javascript">
 
 	setInterval(function(){
