--- a/src/main/resources/html/TZEventsSignInBundle/TZ_HDQD_BMR_LISTS_HTML.html
+++ b/src/main/resources/html/TZEventsSignInBundle/TZ_HDQD_BMR_LISTS_HTML.html
@@ -192,6 +192,6 @@ function confirmQd(url)	{
 </div>
 <input type="hidden" id="yqd_content" name="yqd_content" value="">
 
-<div class="footer">Copyright © 2017 北京大学经济管理学院 版权所有</div>
+<div class="footer">Copyright © 2018 华东理工大学 版权所有</div>
 </body>
 </html>
