活动报名修改

--- a/src/main/resources/html/TZEventsBundle/TZ_APPLY_REG_FORM_HEAD.html
+++ b/src/main/resources/html/TZEventsBundle/TZ_APPLY_REG_FORM_HEAD.html
@@ -111,7 +111,6 @@ body, button, input, select, textarea {
 	overflow: auto;
 	margin: 0 auto;
 	text-align: center;
-	width: 600px
 }
 
 .apply-poptit a.close {
@@ -192,11 +191,9 @@ body, button, input, select, textarea {
 .apply-popover {
 	z-index: 999999;
 	position: absolute;
-	top: 50%; 
-	left: 50%;
-	width: 660px;
+	top: 5%; 
+	width: 100%;
 	max-height: 519px;
-	margin: -180px 0 0 -330px;
 	border-radius: 15px;
 	background-color: #fff;
 }
