--- a/src/main/resources/html/TZEventsBundle/TZ_APPLY_ONLINE_LIST_HEAD.html
+++ b/src/main/resources/html/TZEventsBundle/TZ_APPLY_ONLINE_LIST_HEAD.html
@@ -24,7 +24,7 @@
 	height: 40px;
 	line-height: 40px;
 	padding-left: 15px; 
-	background: #8f5dc0;
+	background: #078445;
 	border-top-left-radius: 15px;
 	border-top-right-radius: 15px;
 	font-size:16px;
@@ -62,7 +62,7 @@
 	height: 30px;
 	font-size: 14px;
 	font-weight: bold;
-	color: #8f5dc0;
+	color: #078445;
 }
 
 .apply-oprList td {
