短信后缀修改

--- a/src/main/resources/html/TZSitePageBundle/TzSemMLoginRelease.html
+++ b/src/main/resources/html/TZSitePageBundle/TzSemMLoginRelease.html
@@ -67,7 +67,7 @@
             			<span>帮助中心</span>
             		</a>
             	</div>
-				<div style="font-size:0.54rem;color:#d81e06;padding:10px;margin-top:5px;">因系统升级，登录如遇密码错误，请通过“<a href="javascript:void(0)" onclick="forgetPwd()" style="display: inline;color:#008043;">重置密码</a>”按钮重置密码后登陆！</div>
+				<div style="font-size:0.54rem;color:#d81e06;padding:10px;margin-top:5px;"><!--   因系统升级，登录如遇密码错误，请通过“<a href="javascript:void(0)" onclick="forgetPwd()" style="display: inline;color:#008043;">重置密码</a>”按钮重置密码后登陆！--></div>
             </div>
             <input id="pagetype" name="pagetype" value="loginpage" type="hidden">
             <input id="jgid" name="jgid" type="hidden" value="%bind(:2)">
