--- a/src/main/resources/html/TZSitePageBundle/TzSemMLoginRelease.html
+++ b/src/main/resources/html/TZSitePageBundle/TzSemMLoginRelease.html
@@ -5,7 +5,7 @@
 <meta name="format-detection" content="telephone=no">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0;"/>
 <title></title>
-<link href="%bind(:1)/statics/css/website/m/css/style.css" rel="stylesheet" type="text/css">
+<link href="%bind(:1)/statics/css/website/m/css/style%bind(:5).css" rel="stylesheet" type="text/css">
 <script type="text/javascript">
 
 	//防止页面后退
