--- a/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MPERFECT_HTML.html
+++ b/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MPERFECT_HTML.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="%bind(:1)/statics/css/website/m/css/style.css">
+<link rel="stylesheet" type="text/css" href="%bind(:1)/statics/css/website/m/css/style%bind(:7).css">
 <!-- <link rel="stylesheet" type="text/css"
 	href="%bind(:1)/statics/js/website/m/jquery-select2/3.4/select2.min.css"> -->
 <script type="text/javascript"
