--- a/src/main/resources/html/TZEventsMobileBundle/TZ_M_APPLY_REG_FORM_HTML.html
+++ b/src/main/resources/html/TZEventsMobileBundle/TZ_M_APPLY_REG_FORM_HTML.html
@@ -5,7 +5,7 @@
 <meta name="format-detection" content="telephone=no">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0;"/>
 <title>在线报名</title>
-<link href="%bind(:1)/statics/css/website/m/css/style.css" rel="stylesheet" type="text/css">
+<link href="%bind(:1)/statics/css/website/m/css/style%bind(:5).css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" href="%bind(:1)/statics/js/website/m/jquery-select2/3.4/select2.min.css">
 
 <script type="text/javascript" src="%bind(:1)/statics/js/website/m/jquery-1.8.3.min.js"></script>
