--- a/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MSUCCESSE_HTML.html
+++ b/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MSUCCESSE_HTML.html
@@ -5,7 +5,7 @@
 <meta name="format-detection" content="telephone=no">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0;"/>
 <title></title>
-<link href="%bind(:2)/statics/css/website/m/css/style.css" rel="stylesheet" type="text/css">
+<link href="%bind(:2)/statics/css/website/m/css/style%bind(:3).css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div class="viewport-adaptive">
