--- a/src/main/resources/html/TZInterviewAppointmentBundle/TZ_M_MS_NONE_APPO_MAIN_HTML.html
+++ b/src/main/resources/html/TZInterviewAppointmentBundle/TZ_M_MS_NONE_APPO_MAIN_HTML.html
@@ -5,7 +5,7 @@
 <meta name="format-detection" content="telephone=no">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0;"/>
 <title>面试预约</title>
-<link href="%bind(:1)/statics/css/website/m/css/style.css" rel="stylesheet" type="text/css">
+<link href="%bind(:1)/statics/css/website/m/css/style%bind(:6).css" rel="stylesheet" type="text/css">
 <script>
 	var TzUniversityContextPath="%bind(:1)";
 </script>
