--- a/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MUPDATE_PWD_MB_HTML.html
+++ b/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MUPDATE_PWD_MB_HTML.html
@@ -6,7 +6,7 @@
 <meta name="viewport"
 	content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0" />
 <title></title>
-<link href="%bind(:7)/statics/css/website/m/css/style.css"	rel="stylesheet" type="text/css" />
+<link href="%bind(:7)/statics/css/website/m/css/style%bind(:11).css"	rel="stylesheet" type="text/css" />
 <script type="text/javascript"
 	src="%bind(:7)/statics/js/website/m/jquery-1.8.3.min.js"></script>
 <script type="text/javascript"
