--- a/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_MOBILE_ZHGL_HEAD_HTML.html
+++ b/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_MOBILE_ZHGL_HEAD_HTML.html
@@ -1,4 +1,4 @@
-<link href="%bind(:1)/statics/css/website/m/css/style.css" rel="stylesheet" type="text/css">
+<link href="%bind(:1)/statics/css/website/m/css/style%bind(:6).css" rel="stylesheet" type="text/css">
 <link href="%bind(:1)/statics/css/website/m/css/dialog.css" rel="stylesheet" type="text/css">
 <link href="%bind(:1)/statics/css/website/m/css/mobile-select-date.css" rel="stylesheet" type="text/css">
 <!-- <link rel="stylesheet" type="text/css" href="%bind(:1)/statics/js/website/m/jquery-select2/3.4/select2.min.css"> -->
