--- a/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MWJMM_EP1_HTML.html
+++ b/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MWJMM_EP1_HTML.html
@@ -6,7 +6,7 @@
 <meta name="viewport"
 	content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0" />
 <title></title>
-<link href="%bind(:1)/statics/css/website/m/css/style.css"	rel="stylesheet" type="text/css" />
+<link href="%bind(:1)/statics/css/website/m/css/style%bind(:6).css"	rel="stylesheet" type="text/css" />
 <style>
 	.login_btn[disabled]{background-color:#eee;color:#999;}
 	.sendBtn[disabled]{background-color:#eee;color:#999;}
