注册相关修改

--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_PHO_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_PHO_HTML.html
@@ -439,7 +439,7 @@
 				<div class="photo_bt" id="save">
 				<div class="photosavbt"><!-- %bind(:19) --> 
 						<a href="javascript:;" class="alpha">
-            				<img src="%bind(:21)/save_photo_bt.png" id="save" height="35" width="111"></a>
+            				<img src="%bind(:21)/%bind(:23)" id="save" height="35" width="111"></a>
             		</div>
             	</div>
 			</div>
