--- a/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_INDEX_TOP.html
+++ b/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_INDEX_TOP.html
@@ -1,5 +1,5 @@
 <!-- 头部 -->
 <div class="top">
-	 <img class="img-responsive" src="%bind(:1)/statics/css/website/m/images/top_bg.png">
+	 <!--   <img class="img-responsive" src="%bind(:1)/statics/css/website/m/images/top_bg.png"> -->
 	 <a onclick="Logout();" href="#" class="logout">退出</a>
 </div>
