--- a/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML_PHONE.html
+++ b/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML_PHONE.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0"/>
 <title>手机报名表</title>
 
-<link rel="stylesheet" href="%bind(:1)/statics/css/appeditor/m/style.css" type="text/css" />
+<link rel="stylesheet" href="%bind(:1)/statics/css/appeditor/m/style%bind(:18).css" type="text/css" />
 <link rel="stylesheet" href="%bind(:1)/statics/css/appeditor/m/LCalendar.css" type="text/css" />
 <link rel="stylesheet" href="%bind(:1)/statics/css/appeditor/m/rest.css" type="text/css" />
 <link rel="stylesheet" href="%bind(:1)/statics/css/appeditor/m/swiper.min.css" type="text/css" />
@@ -818,11 +818,11 @@
 
 	<!--侧滑内容开始-->
 	<div class="cd-top" >
-		<img src="%bind(:1)/statics/images/appeditor/m/re_top.png"/>
+		<img src="%bind(:1)/statics/images/appeditor/m/re_top%bind(:18).png"/>
 	</div>
     <a class="re_home" href="javascript:void(0);"
 			onclick='backToHome("%bind(:17)","%bind(:18)");' id="backindex">
-    <img src="%bind(:1)/statics/images/appeditor/m/re_home.png"/></a>
+    <img src="%bind(:1)/statics/images/appeditor/m/re_home%bind(:18).png"/></a>
 
 	<!--侧滑内容结束-->
 	<input id="ParamCon" type="hidden" name="ParamCon" />
