手机端登录页面修改

--- a/src/main/resources/html/TZSitePageBundle/TzSemMLoginRelease.html
+++ b/src/main/resources/html/TZSitePageBundle/TzSemMLoginRelease.html
@@ -38,7 +38,7 @@
 <body>
      <div class="viewport-adaptive">
          <div class="bg" id="body_login">
-            <img class="img-responsive book_logo" id="" src="%bind(:1)/statics/css/website/m/images/login_logo.png">
+            <!--  <img class="img-responsive book_logo" id="" src="%bind(:1)/statics/css/website/m/images/login_logo.png">-->
             <form action="" method="post" enctype="multipart/form-data" name="Loginform" id="Loginform">
             <div class="login_ab">
             	<div class="login_account">
