--- a/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MUPDATE_PWD_MB_HTML2.html
+++ b/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MUPDATE_PWD_MB_HTML2.html
@@ -253,7 +253,7 @@ function create_yzm(){
 <div id="main" class="viewport-adaptive">
 <form action="" method="post" enctype="multipart/form-data" name="updatePassWord" id="updatePassWord">
 	<div class="bg" id="body_login">
-         <img class="img-responsive book_logo" id="" src="%bind(:7)/statics/css/website/m/images/login_logo.png">
+         <!--  <img class="img-responsive book_logo" id="" src="%bind(:7)/statics/css/website/m/images/login_logo.png">-->
             <div class="login_ab">
             	<div class="login_account">
             		<!-- <div class="login_mm"></div> -->
