--- a/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MWJMM_EP1_HTML.html
+++ b/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MWJMM_EP1_HTML.html
@@ -127,7 +127,7 @@ function send_email(_this){
 <div class="viewport-adaptive">
 		<form action="" method="post" enctype="multipart/form-data"	name="forgetForm" id="forgetForm">
 			<div class="bg" id="body_login">
-				<img class="img-responsive book_logo" id=""	src="%bind(:1)/statics/css/website/m/images/login_logo.png">
+				<!--  <img class="img-responsive book_logo" id=""	src="%bind(:1)/statics/css/website/m/images/login_logo.png">-->
 				<div class="login_ab" style="top: 32%;">
 					<div class="tab_login">
 						<div class="login_tit">
