--- a/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_MY_HTML.html
+++ b/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_MY_HTML.html
@@ -61,13 +61,13 @@
 	   	 	</a>
 	   	 </div>
 	   	 <div class="mine" style="margin-top: 2%;">
-	   	   <a href="%bind(:8)">
+	   	   <!--  <a href="%bind(:8)">
 	   	 	  
 	   	 	  	 <i class="my_jxj"></i>
 	   	 		 <span>申请奖学金</span>
 	   	 		 <i class="arrow"></i>
 	   	 	  
-	   	 	</a>	
+	   	 	</a> -->	
 	   	 	<a href="%bind(:9)">
 	   	 	  	 <i class="my_zh"></i>
 	   	 		 <span>账户管理</span>
