找回密码页面，邮箱修改

--- a/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MWJMM_EP2_HTML.html
+++ b/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MWJMM_EP2_HTML.html
@@ -170,9 +170,9 @@ function send_yzm(_this){
 	                             <p class="login_tips" id="errormsg2" style="display: none;"></p>
 	                             <div class="clear"></div>
 	                             <a href="javascript:void(0)" class="login_btn" onclick="ymobile(this)">下一步</a>
-	                             <p class="add_tips">如有问题，请联系：</p>
+	                             <!-- <p class="add_tips">如有问题，请联系：</p>
 	                             <div class="clear"></div>
-	                             <p class="login_tips" style="float:left;">mbaadmissions@sem.tsinghua.edu.cn</p> 
+	                             <p class="login_tips" style="float:left;">mba@ecust.edu.cn</p> -->
 	                        </div>
 						</div>
 					</div>
