--- a/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MWJMM_EP_HTML.html
+++ b/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MWJMM_EP_HTML.html
@@ -252,9 +252,9 @@ function send_yzm(_this){
 								<div class="clear"></div>
 								<!-- <a href="javascript:void(0)" class="login_btn" onclick="send_email(this)">发送邮件到邮箱</a> -->
 								<input id="sendemail" type="button"  class="login_btn" onclick="send_email(this)" value="发送邮件到邮箱" />
-								<p class="add_tips">如有问题，请联系：</p>
+								<!-- <p class="add_tips">如有问题，请联系：</p>
 								<div class="clear"></div>
-								<p class="login_tips" style="float: left;">mbaadmissions@sem.tsinghua.edu.cn</p>
+								<p class="login_tips" style="float: left;">mba@ecust.edu.cn</p> -->
 							</div>
 							<div class="note_f dis_none">
 	                        	<div class="login_account" style="border-radius:0.3rem;">
@@ -268,9 +268,9 @@ function send_yzm(_this){
 	                             <p class="login_tips" id="errormsg2" style="display: none;"></p>
 	                             <div class="clear"></div>
 	                             <a href="javascript:void(0)" class="login_btn" onclick="ymobile(this)">下一步</a>
-	                             <p class="add_tips">如有问题，请联系：</p>
+	                             <!-- <p class="add_tips">如有问题，请联系：</p>
 	                             <div class="clear"></div>
-	                             <p class="login_tips" style="float:left;">mbaadmissions@sem.tsinghua.edu.cn</p> 
+	                             <p class="login_tips" style="float:left;">mba@ecust.edu.cn</p>  -->
 	                        </div>
 						</div>
 					</div>
