发送短信修改

--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_REG_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_REG_HTML.html
@@ -45,6 +45,7 @@
 	    			<input id="send_Verification" type="button" value="发送手机验证码" class="button_351px" onclick="send_yzm()" style="width:351px;"/>
 				</div>
 	  		</div>
+	  		<div class="main_full_line"><div style="color:#F00">注意：如果使用手机激活，则使用手机号登录，如果使用邮箱激活，则使用邮箱登录。</div></div>
 	  		<div class="main_full_lines"></div>
 			<div class="main_full_line" id="yzfsMobile" %bind(:8)>
 				<div class="main_full_line_left">
