--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_BATCH.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_BATCH.html
@@ -200,7 +200,17 @@ th {
 
 
 		<!-- 其他评委打分详情 -->
-		<div id="otherJudgeScore"></div>
+		<div data-role="popup" id="otherDialog" data-overlay-theme="a" data-corners="false"  data-position-to="origin">
+			<div data-role="header" data-theme="b" role="banner" >
+				<a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" onClick="" class="ui-btn-right" id="closeSignatureDialog">Close</a>
+				<h1  role="heading" aria-level="1">评委打分情况查看</h1>
+			</div>
+			<div data-role="content" data-theme="a" role="main" align="center" >
+
+			</div>
+		</div>
+
+		<div id="otherJudgeScore" style="display: none;"></div>
 
 	</div><!-- /content -->
 
