面试评审评委端

--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_LOGIN.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_LOGIN.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="renderer" content="webkit">
-<title>华东理工大学商学院面试评审系统</title>
+<title>华东理工大学商学院优选面试评分系统</title>
 <link rel="stylesheet" type="text/css" href="%bind(:1)/statics/css/evaluation/style.css" />
 <script type="text/javascript">
 	var ContextPath = "%bind(:1)";
@@ -25,7 +25,7 @@
 				<img src="../../statics/images/evaluation/login_top.png">
 				<div class="main_body2">
 					<div class="main_login">
-						<p style="color:#4e5c8c;">面试评委 请登录</p>
+						<p style="color:#256a48;">面试评委 请登录</p>
 						<div class="login_number">
 							<span class="text_in">账 &nbsp;&nbsp;号：</span>
 							<input id="userName" name="userName" class="number_input" type="text">
@@ -44,11 +44,13 @@
                         <div id="errormsg" style="display:none;" class="tips_error"><span></span></div>
 						<a href="javascript:void(0)" class="login_btn" id="submitbtn">登录</a>
 					</div>
+					<!--  
 					<div class="tips_index" >
 		 				<p style="color:#fff;">本系统正在试运行，如遇问题请联系MBA/MEM项目部：</p>
 		 				<p style="color:#fff;">Tel：021-64252634/64251151</p>
 		 				<p style="color:#fff;">Mail：mba@ecust.edu.cn/mem@ecust.edu.cn</p>
 	 				</div>
+	 				-->
 				</div>
 			</div>
 		</div>
