--- a/src/main/resources/html/TZMaterialInterviewReviewBundle/TZ_GD_MS_PY_PW_PCINFO_HTML.html
+++ b/src/main/resources/html/TZMaterialInterviewReviewBundle/TZ_GD_MS_PY_PW_PCINFO_HTML.html
@@ -30,6 +30,17 @@
 			<w:tcPr>
 				<w:tcW w:w="4000" w:type="dxa" />
 			</w:tcPr>
+			<w:p w:rsidR="0086360D" w:rsidRDefault="0086360D" w:rsidP="00B660B2">
+    			<w:pPr>
+      				<w:jc w:val="left"/>
+      				<w:outlineLvl w:val="0"/>
+      				<w:rPr>
+        				<w:rFonts w:asciiTheme="minorEastAsia" w:hAnsiTheme="minorEastAsia" w:hint="eastAsia"/>
+        				<w:sz w:val="15"/>
+       			 		<w:szCs w:val="15"/>
+      				</w:rPr>
+    			</w:pPr>
+  			</w:p>
 			<w:p w:rsidR="001A1523" w:rsidRPr="000F4BC6"
 				w:rsidRDefault="001A1523" w:rsidP="00B660B2">
 				<w:pPr>
@@ -60,25 +71,42 @@
 					<w:t>%bind(:1)</w:t>
 				</w:r>
 				<w:r w:rsidRPr="000F4BC6">
-					<w:rPr>
-						<w:rFonts w:asciiTheme="minorEastAsia"
-							w:hAnsiTheme="minorEastAsia" />
-						<w:sz w:val="15" />
-						<w:szCs w:val="15" />
-					</w:rPr>
-					<w:t xml:space="preserve">
-					</w:t>
-				</w:r>
-			</w:p>
+      				<w:rPr>
+				        <w:rFonts w:asciiTheme="minorEastAsia" w:hAnsiTheme="minorEastAsia"/>
+				        <w:sz w:val="15"/>
+				        <w:szCs w:val="15"/>
+      				</w:rPr>
+      				<w:tab/>
+    			</w:r>
+    			<w:r>
+      				<w:rPr>
+				        <w:rFonts w:asciiTheme="minorEastAsia" w:hAnsiTheme="minorEastAsia"/>
+				        <w:sz w:val="15"/>
+				        <w:szCs w:val="15"/>
+      				</w:rPr>
+      				<w:tab/>
+    			</w:r>
+  			</w:p>
 		</w:tc>
 		<w:tc>
 			<w:tcPr>
-				<w:tcW w:w="3000" w:type="dxa" />
+				<w:tcW w:w="1000" w:type="dxa" />
 			</w:tcPr>
 			<w:p w:rsidR="001A1523" w:rsidRPr="000F4BC6"
 				w:rsidRDefault="001A1523" w:rsidP="00B660B2">
 				<w:pPr>
 					<w:jc w:val="left" />
+					<w:outlineLvl w:val="0"/>
+					<w:rPr>
+						<w:rFonts w:asciiTheme="minorEastAsia" w:hAnsiTheme="minorEastAsia" w:hint="eastAsia"/>
+						<w:sz w:val="15"/>
+						<w:szCs w:val="15"/>
+					</w:rPr>
+				</w:pPr>
+			</w:p>
+			<w:p w:rsidR="0086360D" w:rsidRPr="000F4BC6" w:rsidRDefault="0086360D" w:rsidP="002A4980">
+				<w:pPr>
+					<w:jc w:val="left"/>
 					<w:outlineLvl w:val="0" />
 					<w:rPr>
 						<w:rFonts w:asciiTheme="minorEastAsia" />
@@ -95,25 +123,23 @@
 					</w:rPr>
 					<w:t>评委签字：</w:t>
 				</w:r>
-				<w:r w:rsidR="00B660B2">
+			</w:p>
+		</w:tc>
+		<w:tc>
+			<w:tcPr>
+				<w:tcW w:w="2000" w:type="dxa"/>
+			</w:tcPr>
+			<w:p w:rsidR="0086360D" w:rsidRPr="000F4BC6" w:rsidRDefault="002A4980" w:rsidP="002A4980">
+				<w:pPr>
+					<w:jc w:val="left"/>
+					<w:outlineLvl w:val="0"/>
 					<w:rPr>
-						<w:rFonts w:asciiTheme="minorEastAsia"
-							w:hAnsiTheme="minorEastAsia" />
-						<w:sz w:val="15" />
-						<w:szCs w:val="15" />
+						<w:rFonts w:asciiTheme="minorEastAsia" w:hAnsiTheme="minorEastAsia" w:hint="eastAsia"/>
+						<w:sz w:val="15"/>
+						<w:szCs w:val="15"/>
 					</w:rPr>
-					<w:t>___________________________</w:t>
-				</w:r>
-				<w:r w:rsidRPr="000F4BC6">
-					<w:rPr>
-						<w:rFonts w:asciiTheme="minorEastAsia"
-							w:hAnsiTheme="minorEastAsia" />
-						<w:sz w:val="15" />
-						<w:szCs w:val="15" />
-					</w:rPr>
-					<w:t xml:space="preserve">
-					</w:t>
-				</w:r>
+				</w:pPr>
+				%bind(:5)
 			</w:p>
 		</w:tc>
 		<w:tc>
@@ -123,6 +149,19 @@
 			<w:p w:rsidR="001A1523" w:rsidRPr="000F4BC6"
 				w:rsidRDefault="001A1523" w:rsidP="00B660B2">
 				<w:pPr>
+      				<w:ind w:firstLineChars="400" w:firstLine="600"/>
+      				<w:jc w:val="left"/>
+      				<w:outlineLvl w:val="0"/>
+				    <w:rPr>
+				        <w:rFonts w:asciiTheme="minorEastAsia" w:hAnsiTheme="minorEastAsia" w:hint="eastAsia"/>
+				        <w:sz w:val="15"/>
+				        <w:szCs w:val="15"/>
+				    </w:rPr>
+    			</w:pPr>
+ 	 		</w:p>
+  			<w:p w:rsidR="0086360D" w:rsidRPr="000F4BC6" w:rsidRDefault="0086360D" w:rsidP="0086360D">
+    			<w:pPr>
+      				<w:ind w:firstLineChars="400" w:firstLine="600"/>
 					<w:jc w:val="left" />
 					<w:outlineLvl w:val="0" />
 					<w:rPr>
@@ -156,8 +195,15 @@
 						<w:sz w:val="15" />
 						<w:szCs w:val="15" />
 					</w:rPr>
-					<w:t xml:space="preserve">
-					</w:t>
+					<w:tab/>
+    			</w:r>
+			    <w:r>
+			      	<w:rPr>
+				        <w:rFonts w:asciiTheme="minorEastAsia" w:hAnsiTheme="minorEastAsia"/>
+				        <w:sz w:val="15"/>
+				        <w:szCs w:val="15"/>
+			      	</w:rPr>
+			      	<w:tab/>
 				</w:r>
 			</w:p>
 		</w:tc>
@@ -166,6 +212,18 @@
 				<w:tcW w:w="3000" w:type="dxa" />
 			</w:tcPr>
 			<w:p w:rsidR="001A1523" w:rsidRPr="000F4BC6"
+				w:rsidRDefault="001A1523" w:rsidP="00B660B2">
+				 <w:pPr>
+      				<w:jc w:val="left"/>
+      				<w:outlineLvl w:val="0"/>
+      				<w:rPr>
+				        <w:rFonts w:asciiTheme="minorEastAsia" w:hAnsiTheme="minorEastAsia" w:hint="eastAsia"/>
+				        <w:sz w:val="15"/>
+				        <w:szCs w:val="15"/>
+      				</w:rPr>
+    			</w:pPr>
+  			</w:p>
+  			<w:p w:rsidR="001A1523" w:rsidRPr="000F4BC6"
 				w:rsidRDefault="001A1523" w:rsidP="00B660B2">
 				<w:pPr>
 					<w:jc w:val="left" />
@@ -194,6 +252,14 @@
 					</w:rPr>
 					<w:t> %bind(:3) 组</w:t>
 				</w:r>
+				<w:r>
+      				<w:rPr>
+				        <w:rFonts w:asciiTheme="minorEastAsia" w:hAnsiTheme="minorEastAsia"/>
+				        <w:sz w:val="15"/>
+				        <w:szCs w:val="15"/>
+				    </w:rPr>
+				    <w:tab/>
+    			</w:r>
 				<w:r w:rsidRPr="000F4BC6">
 					<w:rPr>
 						<w:rFonts w:asciiTheme="minorEastAsia"
@@ -201,8 +267,7 @@
 						<w:sz w:val="15" />
 						<w:szCs w:val="15" />
 					</w:rPr>
-					<w:t xml:space="preserve">
-					</w:t>
+					<w:tab/>
 				</w:r>
 			</w:p>
 		</w:tc>
@@ -211,6 +276,18 @@
 				<w:tcW w:w="3000" w:type="dxa" />
 			</w:tcPr>
 			<w:p w:rsidR="001A1523" w:rsidRPr="000F4BC6"
+				w:rsidRDefault="001A1523" w:rsidP="00B660B2">
+				<w:pPr>
+      				<w:jc w:val="left"/>
+				    <w:outlineLvl w:val="0"/>
+				    <w:rPr>
+				        <w:rFonts w:asciiTheme="minorEastAsia" w:hAnsiTheme="minorEastAsia" w:hint="eastAsia"/>
+				        <w:sz w:val="15"/>
+				        <w:szCs w:val="15"/>
+      				</w:rPr>
+    			</w:pPr>
+  			</w:p>
+  			<w:p w:rsidR="001A1523" w:rsidRPr="000F4BC6"
 				w:rsidRDefault="001A1523" w:rsidP="00B660B2">
 				<w:pPr>
 					<w:jc w:val="left" />
@@ -230,6 +307,14 @@
 					</w:rPr>
 					<w:t>评委账号：</w:t>
 				</w:r>
+				<w:r>
+      				<w:rPr>
+        				<w:rFonts w:asciiTheme="minorEastAsia" w:hAnsiTheme="minorEastAsia"/>
+					    <w:sz w:val="15"/>
+					    <w:szCs w:val="15"/>
+      				</w:rPr>
+      				<w:t>%bind(:4)</w:t>
+    			</w:r>
 				<w:r w:rsidR="00B660B2">
 					<w:rPr>
 						<w:rFonts w:asciiTheme="minorEastAsia"
@@ -237,7 +322,7 @@
 						<w:sz w:val="15" />
 						<w:szCs w:val="15" />
 					</w:rPr>
-					<w:t>%bind(:4)</w:t>
+					 <w:tab/>
 				</w:r>
 				<w:r w:rsidRPr="000F4BC6">
 					<w:rPr>
@@ -246,8 +331,7 @@
 						<w:sz w:val="15" />
 						<w:szCs w:val="15" />
 					</w:rPr>
-					<w:t xml:space="preserve">
-					</w:t>
+					<w:tab/>
 				</w:r>
 			</w:p>
 		</w:tc>
